# pr_bot_development_purpose

./: README.md
.github/workflows/: pr-agent.yaml
danger_code_ws/: 1.cpp  2.cpp
ros2_ws/: CMakeLists.txt  package.xml
ros2_ws/src/: publisher_node.cpp  subscriber_node.cpp
src/: publisher_node.cpp
